ActivEng fixes